@@ -1,3 +1,6 @@
+* 2005-04-22 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Display drop down list of units based on James Graham's patch
+	
 * 2005-04-21 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Widgets can now be added if a parent allows the widget as parent
 	- New item selected after widget is added
